--- a/configs/dummy.yaml
+++ b/configs/dummy.yaml
@@ -2,7 +2,7 @@ GENERATION_NUM: 50
 
 IMAGE_BASE_COLOR: [255, 255, 255]
 BASE_NAME: "debug"
-MAIN_LANGUAGE: "english"
+MAIN_LANGUAGE: "chinese"
 
 IMAGE_WIDTH: [600, 1000]
 IMAGE_HEIGHT: [200, 1000]
